Fixed close back to home button from not covering entire right side of button

--- a/services/techtime/css/style.css
+++ b/services/techtime/css/style.css
@@ -190,7 +190,7 @@ section {
 	position: relative;
 	margin: 0 -12px;
 	padding-left: 14px;
-	padding-right: 16px;
+	padding-right: 20px;
 	right: 0;
 	height: calc(100% + 6px);
 	display: flex;
